--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.0"
+  },
+  "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.15"
   }
 }
