--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@openzeppelin/contracts": "^4.5.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "truffle-plugin-debugger": "^0.0.2",
+    "web3": "^1.7.1"
   },
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.15"
