--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.0",
+    "truffle-assertions": "^0.9.2",
     "truffle-plugin-debugger": "^0.0.2",
     "web3": "^1.7.1"
   },
